--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ h3{
 
 table {
     width: 80%;
+    /* margin-left: auto; */
+    /* margin-right: auto; */
     margin:auto;
     text-align: center;
 }
@@ -14,7 +16,7 @@ th {
 }
 
 table,tr,td,th{
-    border: 2px solid black;
+    border: 3px solid #666;
     border-collapse: collapse;
     height: 60px;
     font-size: large;
